--- a/ML_ex04.ipynb
+++ b/ML_ex04.ipynb
@@ -7,6 +7,7 @@
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +39,8 @@
         "import matplotlib.image as mpimg\n",
         "from PIL import Image\n",
         "from sklearn.svm import SVC\n",
-        "import cv2"
+        "import cv2\n",
+        "from sklearn.model_selection import KFold"
       ],
       "execution_count": 0,
       "outputs": []
@@ -65,7 +67,7 @@
       "metadata": {
         "id": "H3S87szFE7Vf",
         "colab_type": "code",
-        "outputId": "35a9e4c8-ecfd-4ad3-c7a0-88de19626fb3",
+        "outputId": "7be2440a-9ff2-4a19-8542-7cd2d6552447",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 378
@@ -80,7 +82,7 @@
         "  ax[int(counter/10)][counter%10].imshow(negative_ims[j])  \n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -101,7 +103,7 @@
       "metadata": {
         "id": "kmNaOJkkJ7jx",
         "colab_type": "code",
-        "outputId": "ff5b16a6-f029-4090-801c-aa35a5251988",
+        "outputId": "3609cd9e-5902-44fe-eaf6-180b9cb91d48",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -128,25 +130,64 @@
         "\n",
         "positive_edges = np.array([get_canny_edge_detector(imageName) for imageName in positive_names])\n",
         "negative_edges = np.array([get_canny_edge_detector(imageName) for imageName in negative_names])\n",
-        "\n",
-        "X = get_features_array(positive_ims[random_choices], positive_edges[random_choices])\n",
-        "y = [1] * num_items\n",
-        "\n",
-        "X = np.append(X, get_features_array(negative_ims[random_choices], negative_edges[random_choices]), axis=0)\n",
-        "y = np.append(y, [0] * num_items)\n",
         "#print(X)\n",
         "#print(y)"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[14 12 22  8 11 18 29 19 10 28 26 24 16 20 17  4 23 15  9 21]\n"
+            "[ 1 15 11  2  5  3 21 12 19  7 22 18 14 17  4  8 25 23 16 28]\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L2lHELE90VlP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def preprocess_data(choices):\n",
+        "  number_of_items = len(choices)\n",
+        "\n",
+        "  X = get_features_array(positive_ims[choices], positive_edges[choices])\n",
+        "  y = [1] * number_of_items\n",
+        "\n",
+        "  X = np.append(X, get_features_array(negative_ims[choices], negative_edges[choices]), axis=0)\n",
+        "  y = np.append(y, [0] * number_of_items)\n",
+        "  return X,y"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WNKdlPrO2ctx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def execute_N_split(funct):\n",
+        "  n_splits = 5\n",
+        "  number_of_items = len(positive_ims)\n",
+        "  kf = KFold(n_splits)\n",
+        "  acc = 0.0\n",
+        "  for train_index, test_index in kf.split(range(number_of_items)):\n",
+        "    #print(\"TRAIN:\", train_index, \"TEST:\", test_index)\n",
+        "    X_train, y_train = preprocess_data(train_index)\n",
+        "    X_test, y_test = preprocess_data(test_index)\n",
+        "    #print(len(X_train))\n",
+        "    acc += funct(X_train, y_train, test_index)\n",
+        "  print('accuracy is {}'.format(acc * 100 /n_splits))"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -157,16 +198,17 @@
       },
       "source": [
         "#print(clf.predict([[-0.8, -1]]))\n",
-        "def predict(clf):\n",
-        "  positive_pred = clf.predict(get_features_array(positive_ims, negative_edges))\n",
-        "  negative_pred = clf.predict(get_features_array(negative_ims, negative_edges))\n",
+        "def predict(clf, validation_index):\n",
+        "  positive_pred = clf.predict(get_features_array(positive_ims[validation_index], positive_edges[validation_index]))\n",
+        "  negative_pred = clf.predict(get_features_array(negative_ims[validation_index], negative_edges[validation_index]))\n",
         "  acc = np.sum(positive_pred == 1)\n",
         "  acc = acc + np.sum(negative_pred == 0)\n",
-        "  print('accuracy is {}'.format(acc/60 * 100))\n",
-        "  print('--------------------------positive_pred---------------------')\n",
-        "  print(positive_pred)\n",
-        "  print('--------------------------negative_pred----------------------')\n",
-        "  print(negative_pred)"
+        "  #print('accuracy is {}'.format(acc/60 * 100))\n",
+        "  return acc/(len(validation_index) + len(validation_index))\n",
+        "  #print('--------------------------positive_pred---------------------')\n",
+        "  #print(positive_pred)\n",
+        "  #print('--------------------------negative_pred----------------------')\n",
+        "  #print(negative_pred)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -186,49 +228,61 @@
       "metadata": {
         "id": "FWm2-lLZY13n",
         "colab_type": "code",
-        "outputId": "ce55052a-883e-41b0-eb57-982dee8e9b23",
+        "outputId": "a3e290a1-4a39-44fd-dbee-573068d7c2cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 408
+          "height": 34
         }
       },
       "source": [
-        "clf = SVC(gamma='scale')\n",
-        "clf.fit(X, y)\n",
-        "predict(clf)\n",
-        "print(clf)\n",
-        "print(clf.support_vectors_)\n",
-        "print(clf.dual_coef_)\n",
-        "#print(clf.coef_)"
+        "def Radial_kernel(X_train, y_train, test_index):\n",
+        "  clf = SVC(C=1.0, gamma=1e-4)\n",
+        "  clf.fit(X_train, y_train)\n",
+        "  return predict(clf, test_index)\n",
+        "  #print(clf)\n",
+        "execute_N_split(Radial_kernel)"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "accuracy is 96.66666666666667\n",
-            "--------------------------positive_pred---------------------\n",
-            "[0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]\n",
-            "--------------------------negative_pred----------------------\n",
-            "[0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-            "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
-            "  decision_function_shape='ovr', degree=3, gamma='scale', kernel='rbf',\n",
-            "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
-            "  tol=0.001, verbose=False)\n",
-            "[[ 104.02777778  115.12449062   43.56886273    0.        ]\n",
-            " [ 219.37412893  301.25896689  175.98244599    0.        ]\n",
-            " [  22.78586757   24.18265034   23.01516385    0.        ]\n",
-            " [ 182.14925733  289.17515432  221.09806315    0.        ]\n",
-            " [ 189.65566828  245.42606759  245.28895399    0.        ]\n",
-            " [ 161.20629581  227.70760694  184.05179097    0.        ]\n",
-            " [ 196.39276801  428.58534674   91.09003364   12.39583333]\n",
-            " [ 498.79484652 1011.77386851  173.72395833   21.25      ]\n",
-            " [ 337.43314767  397.6500651    61.49647955   15.49479167]\n",
-            " [ 767.26472982  905.18677361  207.64138455   49.140625  ]\n",
-            " [ 313.81032685  517.34490439  119.57016481   25.67708333]\n",
-            " [ 229.23031202  518.0555435    79.922089     27.00520833]]\n",
-            "[[-0.0484369  -1.         -0.30498669 -1.         -0.39935873 -1.\n",
-            "   1.          0.00310857  1.          0.48477438  0.26489939  1.        ]]\n"
+            "accuracy is 96.66666666666666\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PSJf0s647YF-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5169ec51-418c-49d7-a225-1c7c9cd0c601"
+      },
+      "source": [
+        "from sklearn.model_selection import StratifiedShuffleSplit\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "\n",
+        "C_range = np.logspace(-2, 10, 13)\n",
+        "gamma_range = np.logspace(-9, 3, 13)\n",
+        "param_grid = dict(gamma=gamma_range, C=C_range)\n",
+        "cv = StratifiedShuffleSplit(n_splits=5, test_size=0.2, random_state=42)\n",
+        "grid = GridSearchCV(SVC(kernel='sigmoid'), param_grid=param_grid, cv=cv)\n",
+        "data_X, data_y = preprocess_data(np.arange(30))\n",
+        "grid.fit(data_X, data_y)\n",
+        "print(\"The best parameters are %s with a score of %0.2f\" %(grid.best_params_, grid.best_score_))"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The best parameters are {'C': 10.0, 'gamma': 1e-06} with a score of 1.00\n"
           ],
           "name": "stdout"
         }
@@ -249,44 +303,28 @@
       "metadata": {
         "id": "rsrEN8daYeaM",
         "colab_type": "code",
-        "outputId": "da7aa4c0-5c1e-4b8f-bb93-6bea5a433dd1",
+        "outputId": "70441097-6297-4435-9233-e308a3c3b6bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 153
+          "height": 34
         }
       },
       "source": [
-        "clf = SVC(gamma='scale', kernel='linear')\n",
-        "clf.fit(X, y)\n",
-        "predict(clf)\n",
-        "clf.support_vectors_"
+        "def linear_kernel(X_train, y_train, test_index):\n",
+        "  clf = SVC(kernel='linear', gamma=1e-5)\n",
+        "  clf.fit(X_train, y_train)\n",
+        "  return predict(clf, test_index)\n",
+        "#clf.support_vectors_\n",
+        "execute_N_split(linear_kernel)"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "accuracy is 98.33333333333333\n",
-            "--------------------------positive_pred---------------------\n",
-            "[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]\n",
-            "--------------------------negative_pred----------------------\n",
-            "[0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n"
+            "accuracy is 96.66666666666666\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[219.37412893, 301.25896689, 175.98244599,   0.        ],\n",
-              "       [196.39276801, 428.58534674,  91.09003364,  12.39583333],\n",
-              "       [337.43314767, 397.6500651 ,  61.49647955,  15.49479167]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 7
         }
       ]
     },
@@ -305,45 +343,28 @@
       "metadata": {
         "id": "KTRoV2NIYYDe",
         "colab_type": "code",
-        "outputId": "949bfa63-e326-4d67-ad42-b0a1607e5f88",
+        "outputId": "8b5053b6-5f1b-4a09-b3d9-814ad979348d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 170
+          "height": 34
         }
       },
       "source": [
-        "clf = SVC(gamma='scale', kernel='poly')\n",
-        "clf.fit(X, y)\n",
-        "predict(clf)\n",
-        "clf.support_vectors_"
+        "def polynomial_kernel(X_train, y_train, test_index):\n",
+        "  clf = SVC(gamma=0.0001, kernel='poly', C= 0.001)\n",
+        "  clf.fit(X_train, y_train)\n",
+        "  return predict(clf, test_index)\n",
+        "execute_N_split(polynomial_kernel)\n",
+        "#clf.support_vectors_"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "accuracy is 95.0\n",
-            "--------------------------positive_pred---------------------\n",
-            "[0 1 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]\n",
-            "--------------------------negative_pred----------------------\n",
-            "[0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n"
+            "accuracy is 96.66666666666667\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[219.37412893, 301.25896689, 175.98244599,   0.        ],\n",
-              "       [182.14925733, 289.17515432, 221.09806315,   0.        ],\n",
-              "       [196.39276801, 428.58534674,  91.09003364,  12.39583333],\n",
-              "       [337.43314767, 397.6500651 ,  61.49647955,  15.49479167]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 8
         }
       ]
     },
@@ -362,63 +383,28 @@
       "metadata": {
         "id": "_ndEXRnsYdXq",
         "colab_type": "code",
-        "outputId": "ab31cd16-fffe-4b88-9b45-4bb901cd1fa6",
+        "outputId": "0529f53a-ce61-4d28-a14e-ec9b389f22ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 476
+          "height": 34
         }
       },
       "source": [
-        "clf = SVC(gamma='scale', kernel='sigmoid')\n",
-        "clf.fit(X, y)\n",
-        "predict(clf)\n",
-        "clf.support_vectors_"
+        "def sigmoidal_kernel(X_train, y_train, test_index):\n",
+        "  clf = SVC(gamma=1e-06, kernel='sigmoid')\n",
+        "  clf.fit(X_train, y_train)\n",
+        "  return predict(clf, test_index)\n",
+        "#clf.support_vectors_\n",
+        "execute_N_split(sigmoidal_kernel)"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "accuracy is 60.0\n",
-            "--------------------------positive_pred---------------------\n",
-            "[1 1 1 1 1 1 1 0 1 1 1 0 0 1 1 1 1 0 1 1 0 1 1 0 0 1 0 1 1 0]\n",
-            "--------------------------negative_pred----------------------\n",
-            "[0 1 1 0 0 1 1 0 0 1 1 0 0 0 1 1 0 1 0 0 1 1 0 0 1 1 0 0 1 1]\n"
+            "accuracy is 96.66666666666667\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[ 101.66290208,  130.21165787,  126.48567708,    0.        ],\n",
-              "       [  66.34066358,   53.86033951,   43.58873155,    0.        ],\n",
-              "       [ 104.02777778,  115.12449062,   43.56886273,    0.        ],\n",
-              "       [ 100.17831006,  164.85098078,  100.00998264,    0.        ],\n",
-              "       [ 219.37412893,  301.25896689,  175.98244599,    0.        ],\n",
-              "       [  89.33282395,   91.26858784,   93.37333321,    0.        ],\n",
-              "       [ 112.96672152,  122.5356596 ,   73.20177469,    0.        ],\n",
-              "       [  94.48769953,  105.61819722,   78.50585636,    0.        ],\n",
-              "       [ 182.14925733,  289.17515432,  221.09806315,    0.        ],\n",
-              "       [ 189.65566828,  245.42606759,  245.28895399,    0.        ],\n",
-              "       [ 161.20629581,  227.70760694,  184.05179097,    0.        ],\n",
-              "       [ 498.79484652, 1011.77386851,  173.72395833,   21.25      ],\n",
-              "       [ 405.4335184 ,  682.73606289,   76.72923599,   35.41666667],\n",
-              "       [ 360.0097385 ,  781.73543294,  199.28426107,   27.890625  ],\n",
-              "       [ 485.82595486,  790.48490548,   80.96556412,   31.43229167],\n",
-              "       [ 336.66184414,  602.21208285,  123.7829831 ,   30.98958333],\n",
-              "       [ 459.44067081,  657.63191732,   62.19096017,   33.64583333],\n",
-              "       [ 767.26472982,  905.18677361,  207.64138455,   49.140625  ],\n",
-              "       [ 635.67396979,  835.38628171,   82.23513455,   38.07291667],\n",
-              "       [ 579.49207899,  996.68973946,   97.13887683,   41.61458333],\n",
-              "       [ 512.00990729,  716.02254232,  117.80921766,   22.13541667],\n",
-              "       [ 635.59707453,  761.39016385,  161.3298581 ,   64.63541667]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
         }
       ]
     }
