--- a/Copy_of_ML_ex06.ipynb
+++ b/Copy_of_ML_ex06.ipynb
@@ -57,7 +57,7 @@
       "metadata": {
         "id": "NkP0WpdbdIoi",
         "colab_type": "code",
-        "outputId": "4a885214-5c48-4a9e-f89e-35646fee0b8e",
+        "outputId": "d1b093cd-f4f2-42d8-ce29-d837190b5fd7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -76,7 +76,7 @@
         "print(mu, sigma)\n",
         "#print(data_points)"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "wz-7ZpodukWV",
         "colab_type": "code",
-        "outputId": "95dc5f57-043d-426e-fa43-f04f203a823c",
+        "outputId": "65d4d5bd-4b57-4c10-c8dd-8f32272182e2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 506
@@ -132,7 +132,7 @@
       "metadata": {
         "id": "rNNqVw1buIlz",
         "colab_type": "code",
-        "outputId": "a1808dc7-bc58-4916-a475-da10186f9100",
+        "outputId": "89e8b1ad-9bd4-4267-a6a7-56a51b1843e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 506
@@ -244,7 +244,7 @@
       "metadata": {
         "id": "sRHnt8IVN1NA",
         "colab_type": "code",
-        "outputId": "710e5778-1ab9-4dce-a219-158cf66d4be1",
+        "outputId": "d44e9a0f-daf4-418d-c1b5-0dd6e9d1a81d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -259,7 +259,7 @@
         "print(model.mu)\n",
         "print(model.sigma)"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,17 +303,17 @@
       "metadata": {
         "id": "Weuem4u0Y0Qj",
         "colab_type": "code",
+        "outputId": "167ca07e-13df-4f8d-a2e1-414147d19ac5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "d5f1fa49-4e5a-48cb-81c5-fd5bb82fbfcb"
+        }
       },
       "source": [
         "import matplotlib.cm\n",
         "matplotlib.cm.cmap_d.keys()"
       ],
-      "execution_count": 33,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -325,7 +325,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 10
         }
       ]
     },
@@ -334,7 +334,7 @@
       "metadata": {
         "id": "A45YKi22r6so",
         "colab_type": "code",
-        "outputId": "3123a828-172d-44cf-ec48-dba768a305d8",
+        "outputId": "5bee081b-e635-48ed-c0c5-7a10826a6815",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 456
@@ -381,7 +381,7 @@
         "  plt.contour(X, Y, Z.pdf(ind), 20, cmap=cmap[i])\n",
         "\n"
       ],
-      "execution_count": 259,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -419,11 +419,11 @@
       "metadata": {
         "id": "-SxDbdbEm2k1",
         "colab_type": "code",
+        "outputId": "c87ed1ed-17ea-41b5-d8a0-1daa9201475e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "c87ed1ed-17ea-41b5-d8a0-1daa9201475e"
+        }
       },
       "source": [
         "def symmetrize(a):\n",
@@ -434,7 +434,7 @@
         "\n",
         "a / [2,1]\n"
       ],
-      "execution_count": 227,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -456,29 +456,29 @@
       "metadata": {
         "id": "39uagRx6a6f6",
         "colab_type": "code",
+        "outputId": "fdd67c1d-0bd1-42d7-a3de-ff9837e6e300",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "ae1da216-948b-4cfd-8098-d5eca0ed6e0d"
+        }
       },
       "source": [
         "mutlivariate_data_points = np.concatenate((data_points[0], data_points[1], data_points[2]))\n",
         "mutlivariate_data_points.shape"
       ],
-      "execution_count": 253,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(300, 2)"
+              "(250, 1)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 253
+          "execution_count": 13
         }
       ]
     },
@@ -540,14 +540,11 @@
         "    random_mu_index = np.random.choice(self.num_datapoints, self.num_gaussians, replace=False)\n",
         "    self.mu = self.datapoints[random_mu_index]\n",
         "    sigma_temp = np.cov(self.datapoints, rowvar=False)\n",
-        "    #print(sigma_temp)\n",
-        "    #print(sigma_temp.T)\n",
-        "    sigma_temp = np.diag([sigma_temp[0,1], sigma_temp[1,0]])\n",
-        "    #print(sigma_temp)\n",
-        "    #sigma_temp = sigma_temp[:,(1,0)]\n",
+        "    print(sigma_temp)\n",
+        "    digonal_ele = sigma_temp[0,0] if sigma_temp[0,0] > 0 else -sigma_temp[0,0]\n",
+        "    sigma_temp = np.diag([digonal_ele, digonal_ele])\n",
+        "\n",
         "    self.sigma = np.array([sigma_temp] * self.num_gaussians)\n",
-        "    #shape = 3,2,2\n",
-        "    #self.sigma = np.full(shape, np.cov(self.datapoints, rowvar = False))\n",
         "    \n",
         "    print('initial values are', self.alpha)\n",
         "    print(self.mu)\n",
@@ -566,14 +563,14 @@
       "metadata": {
         "id": "wNwlfjLQdmV5",
         "colab_type": "code",
+        "outputId": "25666e83-b1d5-4165-d2c3-b9ad943c9b8e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 442
-        },
-        "outputId": "d5096227-6bf5-4421-dd6a-2668d7dc6be3"
+          "height": 476
+        }
       },
       "source": [
-        "model = GMM(3, 100)\n",
+        "model = GMM(3, 200)\n",
         "\n",
         "model.fit(mutlivariate_data_points)\n",
         "print('final values are')\n",
@@ -581,36 +578,38 @@
         "print(model.mu)\n",
         "print(model.sigma)"
       ],
-      "execution_count": 261,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "[[ 5.53883428 -3.74315053]\n",
+            " [-3.74315053  5.53590655]]\n",
             "initial values are [0.3333333333333333, 0.3333333333333333, 0.3333333333333333]\n",
-            "[[-1.47681096 -1.93796618]\n",
-            " [ 1.74236318  1.34208585]\n",
-            " [ 2.38631698  2.53678619]]\n",
-            "[[[5.8356398 0.       ]\n",
-            "  [0.        5.8356398]]\n",
+            "[[ 6.78779625 -0.17581134]\n",
+            " [ 0.57193933  6.26554767]\n",
+            " [-0.33881523  5.24760557]]\n",
+            "[[[5.53883428 0.        ]\n",
+            "  [0.         5.53883428]]\n",
             "\n",
-            " [[5.8356398 0.       ]\n",
-            "  [0.        5.8356398]]\n",
+            " [[5.53883428 0.        ]\n",
+            "  [0.         5.53883428]]\n",
             "\n",
-            " [[5.8356398 0.       ]\n",
-            "  [0.        5.8356398]]]\n",
+            " [[5.53883428 0.        ]\n",
+            "  [0.         5.53883428]]]\n",
             "final values are\n",
-            "[0.11605102 0.47464069 0.40930829]\n",
-            "[[0.94726005 1.14047193]\n",
-            " [1.1014565  1.30454787]\n",
-            " [3.7644998  3.89293726]]\n",
-            "[[[12.24221194 11.96819003]\n",
-            "  [11.96819003 11.71224626]]\n",
+            "[0.42295603 0.44050734 0.13653663]\n",
+            "[[4.33627879 0.24155832]\n",
+            " [0.2420799  4.1967417 ]\n",
+            " [0.88572304 0.90285637]]\n",
+            "[[[14.91106331 -2.94912602]\n",
+            "  [-2.94912602  1.07250243]]\n",
             "\n",
-            " [[11.64820118 11.44707996]\n",
-            "  [11.44707996 11.3625864 ]]\n",
+            " [[ 1.06221858 -2.74506782]\n",
+            "  [-2.74506782 14.29000705]]\n",
             "\n",
-            " [[ 2.82371742  3.5590545 ]\n",
-            "  [ 3.5590545   4.54729065]]]\n"
+            " [[ 0.94100809  0.75593813]\n",
+            "  [ 0.75593813  1.0317932 ]]]\n"
           ],
           "name": "stdout"
         }
@@ -621,11 +620,11 @@
       "metadata": {
         "id": "Wqgv-GTN55By",
         "colab_type": "code",
+        "outputId": "dbafa892-d2c0-4fba-e382-6df99b54fb37",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
-        },
-        "outputId": "453a9234-a57e-42d4-bf73-839ca8d54a0b"
+        }
       },
       "source": [
         "from sklearn.mixture import GaussianMixture\n",
@@ -645,21 +644,21 @@
         "# [[0.5 0. ]\n",
         "#  [0.  0.5]]"
       ],
-      "execution_count": 272,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[ 2.14360069  2.08648489]\n",
-            " [ 5.03292854  5.36321131]\n",
-            " [-0.65582656 -0.41482838]] [[[0.23751448 0.44064876]\n",
-            "  [0.44064876 0.81751808]]\n",
+            "[[0.97391466 1.0289295 ]\n",
+            " [5.12261772 0.05369403]\n",
+            " [0.02933507 5.08411981]] [[[ 0.79309412  0.42250899]\n",
+            "  [ 0.42250899  0.98950959]]\n",
             "\n",
-            " [[0.21227598 0.39382483]\n",
-            "  [0.39382483 0.73064763]]\n",
+            " [[ 0.38547009 -0.10439964]\n",
+            "  [-0.10439964  0.50562204]]\n",
             "\n",
-            " [[0.09030904 0.1675447 ]\n",
-            "  [0.1675447  0.31083963]]]\n"
+            " [[ 0.50847624 -0.06086655]\n",
+            "  [-0.06086655  0.63841654]]]\n"
           ],
           "name": "stdout"
         }
@@ -897,6 +896,74 @@
           "metadata": {
             "tags": []
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g1uJ9T3HKZAj",
+        "colab_type": "text"
+      },
+      "source": [
+        "# KNN"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lbCmqffeKaER",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.neighbors import KNeighborsClassifier"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IFJtDvqzKoy8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "370d19c6-2604-4cd2-e060-4472017e53ea"
+      },
+      "source": [
+        "y = [0] * 100 + [1] * 100 + [2] * 50\n",
+        "print(mutlivariate_data_points.shape)\n",
+        "neigh = KNeighborsClassifier(n_neighbors=3)\n",
+        "neigh.fit(mutlivariate_data_points, y) \n",
+        "#print(neigh.predict(mutlivariate_data_points[:100]))\n",
+        "#print(neigh.predict(mutlivariate_data_points[100:200]))\n",
+        "#print(neigh.predict(mutlivariate_data_points[200:300]))"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(250, 1)\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+              "                     metric_params=None, n_jobs=None, n_neighbors=3, p=2,\n",
+              "                     weights='uniform')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
         }
       ]
     }
