--- a/Ex08.ipynb
+++ b/Ex08.ipynb
@@ -6,6 +6,7 @@
       "name": "Ex08.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -340,7 +341,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# 4 X 4 Grid Environment"
+        "# 4 X 4 Grid Experiment"
       ]
     },
     {
