--- a/ML_ex07_UCB.ipynb
+++ b/ML_ex07_UCB.ipynb
@@ -29,6 +29,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cOWeU5_z6GhP",
+        "colab_type": "text"
+      },
+      "source": [
+        "**NOTE: For UCB, please scroll to the bottom of the notebook**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "y2Ern5W9lx2G",
@@ -606,19 +616,6 @@
       "source": [
         "**Hence Under optimistic initialzation, the agent explores more even with epsilon zero since the q values are normally distributed around 1 and the q is highly optimistic being 5 . optimistic intialzation works well However it is not used in practice because a good optimistic initial value is unknown**"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "m-TLYRzL_F0H",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
